--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     text-align: center;
     font-family: sans-serif;
     background-color: #FFBE86;
-    cursor: url("spoon.svg"), auto;
+    /*cursor: url("spoon.svg"), auto;*/
 }
 
 main {
@@ -46,20 +46,43 @@ main {
     justify-content: center;
 }
 
+#container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+#side {
+    display: grid;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    align-content: center;
+    justify-content: center;
+}
+
+#defaultCanvas0 {
+    border-radius: 10px;
+    box-shadow: 0 0 5px 5px #FFB5C2;
+    /*height: auto;*/
+    width: 200px;
+    height: 300px;
+}
+
 #steps {
     display: grid;
     margin: 20px;
     align-items: center;
     justify-content: center;
+    width: 90%;
 }
 
 .step {
     align-items: center;
     justify-content: center;
-    display: none;
+    display: grid;
     height: 100px;
     gap: 20px;
     padding: 20px;
+
 }
 
 h1 {
@@ -68,11 +91,20 @@ h1 {
     font-size: 50px;
 }
 
-h2 {
+h2, button {
     font-family: Anton;
     font-size: 30px;
     font-weight: lighter;
     color: #FFB5C2;
+    padding-bottom: 30px;
+}
+
+button {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    /*background-color: #FFBE86;*/
+    color: #3777ff;
 }
 
 #lemons {
@@ -88,6 +120,7 @@ h2 {
     align-items: center;
     gap: 20px;
     height: 50px;
+    color: khaki;
 }
 
 #water {
@@ -134,6 +167,13 @@ p {
     font-family: Raleway;
     font-size: 30px;
     font-weight: bold;
+    color: #3777ff;
+}
+
+p.smtext {
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: lighter;
     color: #3777ff;
 }
 
